# Monitoring-System

./: .env  .gitignore  README.md  docker-compose.yml  mprocs.yaml
Monitoring-agent/: makefile
Monitoring-agent/src/: main.c  request.c
Monitoring-backend/: Cargo.toml
Monitoring-backend/src/: lib.rs  main.rs
Monitoring-frontend/: config.json  system.js
Monitoring-frontend/create/: create.js
Monitoring-frontend/global/: default.css  default.js
agent/: .gitignore  makefile
agent/include/: cpu.h  info.h  mem.h  parser.h  request.h  system.h
agent/src/: cpu.c  info.c  main.c  mem.c  parser.c  request.c  system.c
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-35e8dbbc5272665d02251e12ff1520a348fc1a2adaa493377dede2752378e48e.json  query-4c8f996fec287ce6f698df1a4196d3ec72a5b5a7d32f2ec41f6ab93e2986058f.json  query-aff414ad2eb08318c0ae2beb266560c2f140fee8bab65e000d45784ed915eae5.json
backend/migrate/: 001_tables.sql
backend/src/: agent.rs  api.rs  database.rs  lib.rs  main.rs  systeminfo.rs  systemmetrics.rs
frontend/: Dockerfile  config.json  cpu.js  index.css  index.html  mem.js  system.js
frontend/create/: create.css  create.js  index.html
frontend/global/: default.css  default.js  nav.js  state.js
