[package]
name = "monitoring-backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
actix-cors = "0.7.1"
actix-web = "4"
serde = { version ="1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std", "migrate"] }
